# tcxHwVideo

./: .gitignore  CMakeLists.txt  README.md
example-hwvideo/: CMakeLists.txt  addons.make
example-hwvideo/src/: main.cpp  tcApp.cpp  tcApp.h
src/: tcxHwVideoPlayer.h  tcxHwVideoPlayer_linux.cpp
